Set both size & z-index to avoid bleeding.

--- a/src/styles/app.less
+++ b/src/styles/app.less
@@ -11,13 +11,16 @@
 }
 
 webview {
-  width: 100%;
-  height: 100%;
   position: absolute;
 
+  width: 100%;
+  height: 100%;
   z-index: 1;
 
   &:not(.isSelected) {
+    flex: 0 1;
+    width: 0px;
+    height: 0px;
     z-index: -1;
   }
 }
